# my-cpe-lab

./: .gitignore
CPE100/: README.md
Y2/CPE232/: .gitignore  main.py  pyproject.toml
Y2/CPE232/lab/lab01/: HW_1_Basic_Python_Programming.ipynb
Y2/CPE232/lab/lab02/: HW-2-Types-of-Data-(INTL).html  HW-2-Types-of-Data-(INTL).ipynb  Lab-2-Types-of-Data.html  html_file.html  students.csv  students.html  xml_file.xml
Y2/CPE232/lab/lab03/hw/: HW_3_Data_Preparation.ipynb  organizations-1.csv  organizations-2.csv
Y2/CPE232/lab/lab03/lab/: lab-3-data-preparation.ipynb
Y2/CPE232/sessions/01_basic_python/lab/: lab_1_basic_python_programming.ipynb  test.csv  test.json
Y2/CPE232/sessions/02_data_types/hw/: employee_data.csv  employee_data_with_bonus.csv
Y2/CPE232/sessions/02_data_types/lab/: lab_2_types_of_data.ipynb
Y2/CPE232/sessions/03_data_preparation/hw/: bike_sharing_demand.csv  hw_3_data_preparation.ipynb  organizations_3.csv
Y2/CPE232/sessions/03_data_preparation/lab/: lab_3_data_preparation.ipynb
Y2/CPE232/sessions/04_data_visualization/lab/: demo_data_visualization.ipynb  lab_4_data_visualization.ipynb
Y2/CPE232/sessions/05_eda/: .gitattributes  .gitignore  lab_5_eda.ipynb  lab_5_eda_draft.ipynb
Y2/CPE232/sessions/05_eda/output/: finder67_hits.csv  finder67_summary.csv
Y2/CPE232/sessions/06_classification/: README.md
Y2/CPE232/sessions/06_classification/hw/: dataset.csv  hw_6_classification.ipynb
Y2/CPE232/sessions/06_classification/lab/: lab_6_classification.ipynb  toy_data.csv
Y2/CPE232/sessions/08_tuning/: lab_8_tuning.ipynb  pyproject.toml
Y2/CPE232/sessions/09_clustering/: lab_9_clustering.ipynb  main.py  pyproject.toml
(+431 files in other folders)
