[project]
name = "cpe232"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.4.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.2",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "nbqa>=1.9.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "ruff>=0.14.13",
    "ruff-lsp>=0.0.62",
    "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]  # Allow imports not at top of file in notebooks

[tool.nbqa]
addopts = "--ruff"
